WikipediaKing: Removed unnecessary codes